# OpenGuard

./: .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts  vite-env.d.ts
frontend/src/api/: eventsApi.ts
frontend/src/components/: CallHistory.tsx  EmergencyLog.tsx  EventCard.tsx  OngoingCalls.tsx  Panel.tsx  StatusBar.tsx  VideoMonitor.tsx
src/: main.py  worker.py
src/application/: __init__.py
src/application/dtos/: detection_dtos.py  voice_agent_dtos.py
src/application/mappers/: security_event_mapper.py
src/application/ports/: active_emergency_tracker_port.py  detection_confirmation_port.py  event_publisher_port.py  llm_port.py  notification_port.py  task_queue_port.py  vision_analyzer_port.py  (+2 more)
src/domain/: __init__.py  exceptions.py
src/infrastructure/: __init__.py  container.py
src/interfaces/: __init__.py
tests/: conftest.py
tests/application/: test_analyze_feed_frame_use_case.py  test_emergency_dedup.py  test_escalate_event_use_case.py  test_place_emergency_call_use_case.py  test_process_detection_use_case.py  test_vision_rate_limiting.py
tests/domain/: test_call_record.py  test_emergency_service.py  test_feed_clip.py  test_security_event.py  test_threat_assessment_service.py
tests/infrastructure/: fake_redis.py
tests/interfaces/: test_api_auth.py  test_app_boot.py  test_cameras_endpoint.py
(+53 files in other folders)
